--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
         <h2>پنل کاربری</h2>
         <p>برای وارد شدن به کیف پول خود، دکمه زیر را بزنید:</p>
         <a href="#" class="button" onclick="openWallet()">ورود به کیف پول</a>
+        <a href="arz.html" class="button">نمودار تحلیل</a>
+
     </div>
 
     <div class="list-coin">
